force-app/main/default/objects/CustomProduct__c/CustomProduct__c.object-meta.xml
<CustomObject>
    <label>CustomProduct</label>
    <nameField>
        <label>Product Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>