force-app/main/default/objects/CustomProduct__c/fields/brand__c.field-meta.xml
<CustomField>
    <fullName>brand__c</fullName>
    <description>the brand name of the shoe manufacturer</description>
    <label>brand</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>