force-app/main/default/objects/CustomProduct__c/fields/category__c.field-meta.xml
<CustomField>
    <fullName>category__c</fullName>
    <label>category</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>hiking</fullName>
            </value>
            <value>
                <fullName>indoor</fullName>
            </value>
            <value>
                <fullName>outdoor</fullName>
            </value>
            <value>
                <fullName>running</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>