force-app/main/default/objects/CustomProduct__c/fields/gender__c.field-meta.xml
<CustomField>
    <fullName>gender__c</fullName>
    <label>gender</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>mens</fullName>
            </value>
            <value>
                <fullName>womens</fullName>
            </value>
            <value>
                <fullName>boys</fullName>
            </value>
            <value>
                <fullName>girls</fullName>
            </value>
            <value>
                <fullName>unisex</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>