force-app/main/default/objects/CustomProduct__c/fields/heel_height__c.field-meta.xml
<CustomField>
    <fullName>heel_height__c</fullName>
    <label>heel height</label>
    <length>10</length>
    <type>Text</type>
</CustomField>