force-app/main/default/objects/CustomProduct__c/fields/imageUrl__c.field-meta.xml
<CustomField>
    <fullName>imageUrl__c</fullName>
    <description>url of product image</description>
    <label>imageUrl</label>
    <required>true</required>
    <type>Url</type>
</CustomField>