force-app/main/default/objects/CustomProduct__c/fields/width__c.field-meta.xml
<CustomField>
    <fullName>width__c</fullName>
    <label>width</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>medium</fullName>
            </value>
            <value>
                <fullName>wide</fullName>
            </value>
            <value>
                <fullName>extra wide</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>